--- a/src/components/assents/css/custom.css
+++ b/src/components/assents/css/custom.css
@@ -2071,6 +2071,13 @@ header.main-header .header-sticky.active {
     border: 1px solid var(--divider-color);
     border-radius: 24px;
     padding: 40px;
+    height: 380px;
+    width: 300px;
+}
+
+.client-testimonial-rating {
+    margin: 25px auto;
+    margin-left: -30px;
 }
 
 .testimonial-author {
@@ -4306,6 +4313,7 @@ header.main-header .header-sticky.active {
 .contact-us-form,
 .contact-us-image {
     width: 50%;
+margin: 0 auto;
 }
 
 .contact-us-form {
@@ -5371,6 +5379,22 @@ header.main-header .header-sticky.active {
         align-self: center;
         align-content: center;
     }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: 65px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
+    }
 }
 
 @media only screen and (min-width: 800px) and (max-width: 900px) {
@@ -5384,6 +5408,22 @@ header.main-header .header-sticky.active {
         align-items: center;
         align-self: center;
         align-content: center;
+    }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: 65px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
     }
 }
 
@@ -5399,6 +5439,22 @@ header.main-header .header-sticky.active {
         align-self: center;
         align-content: center;
     }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: -2px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
+    }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 700px) {
@@ -5412,6 +5468,22 @@ header.main-header .header-sticky.active {
         align-items: center;
         align-self: center;
         align-content: center;
+    }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: -2px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
     }
 }
 
@@ -5428,6 +5500,22 @@ header.main-header .header-sticky.active {
         align-self: center;
         align-content: center;
     }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: -2px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
+    }
 }
 
 @media only screen and (min-width: 400px) and (max-width: 500px) {
@@ -5442,6 +5530,22 @@ header.main-header .header-sticky.active {
         align-self: center;
         align-content: center;
     }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: -2px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
+    }
 }
 
 @media only screen and (min-width: 342px) and (max-width: 400px) {
@@ -5454,6 +5558,22 @@ header.main-header .header-sticky.active {
         align-items: center;
         align-self: center;
         align-content: center;
+    }
+
+    .col-lg-121 {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        align-self: auto;
+        align-content: center;
+        margin-left: -2px;
+    }
+
+    .col-md-6 {
+        margin-top: 25px;
     }
 
 
@@ -6091,7 +6211,7 @@ header.main-header .header-sticky.active {
     animation: shadows 1.2s ease-in infinite, move 1.2s ease-in infinite;
     letter-spacing: 0.4rem;
     font-size: 10px;
-    color: none;
+    color: green;
     padding-top: 25px;
 }
 
