--- a/src/components/assents/css/custom.css
+++ b/src/components/assents/css/custom.css
@@ -6310,3 +6310,11 @@ header.main-header .header-sticky.active {
     display: flex;
     column-gap: 25px;
 }
+
+.sodi {
+    display: flex;
+}
+
+.ifgb {
+    margin-top: 25px;
+}
