--- a/src/components/assents/css/custom.css
+++ b/src/components/assents/css/custom.css
@@ -627,7 +627,7 @@ header.main-header .header-sticky.active {
 }
 
 .main-menu ul li.nav-item a {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     line-height: normal;
     padding: 15px !important;
@@ -6317,4 +6317,78 @@ header.main-header .header-sticky.active {
 
 .ifgb {
     margin-top: 25px;
+}
+
+.theme-togglee {
+    padding: 10px 20px;
+    background-color: var(--text-color);
+    color: var(--bg-color);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 0px;
+    width: 14%;
+}
+
+.containere {
+    max-width: 1140px;
+}
+
+.main-body {
+    padding: 15px;
+}
+
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col,
+.gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+.mb-3,
+.my-3 {
+    margin-bottom: 1rem !important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+
+.h-100 {
+    height: 100% !important;
+}
+
+.shadow-none {
+    box-shadow: none !important;
+}
+
+.g {
+    display: flex;
+    column-gap: 15px;
 }
