--- a/src/components/assents/css/custom.css
+++ b/src/components/assents/css/custom.css
@@ -6431,6 +6431,7 @@ header.main-header .header-sticky.active {
         top: -15px;
     }
 }
+
 @media only screen and (min-width: 600px) and (max-width: 700px) {
     .nauyu {
         margin-top: 19px;
@@ -6442,6 +6443,7 @@ header.main-header .header-sticky.active {
         top: -15px;
     }
 }
+
 @media only screen and (min-width: 500px) and (max-width: 600px) {
     .nauyu {
         margin-top: 19px;
@@ -6453,6 +6455,7 @@ header.main-header .header-sticky.active {
         top: -15px;
     }
 }
+
 @media only screen and (min-width: 400px) and (max-width: 500px) {
     .nauyu {
         margin-top: 19px;
@@ -6464,6 +6467,7 @@ header.main-header .header-sticky.active {
         top: -15px;
     }
 }
+
 @media only screen and (min-width: 342px) and (max-width: 400px) {
     .nauyu {
         margin-top: 19px;
@@ -6474,4 +6478,17 @@ header.main-header .header-sticky.active {
         position: relative;
         top: -15px;
     }
+}
+
+.navbar>.container,
+.navbar>.container-fluid,
+.navbar>.container-lg,
+.navbar>.container-md,
+.navbar>.container-sm,
+.navbar>.container-xl,
+.navbar>.container-xxl {
+    align-items: center;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
